# bobr

./: .env.example  Cargo.toml  STOCK_TRADING.md
migrations/: 20250117000000_stocks.sql  20250730105208_initial.sql
src/: commands.rs  main.rs
tests/: integration_test.rs
